[package]
name = "exgpc"
version = "0.1.0"
authors = ["guoxingyun <792130043@qq.com>"]
edition = "2018"

[dependencies]
mongodb = "0.3.11"
jsonrpc-http-server = "12.0"
serde = { version = "1.0", features = ["derive"] }
##ring ={ path = "/home/gxy/myproject/exgpc/ring" }
ring = "0.14.6"
base64 = "0.10.1"
untrusted = "0.6.2"

[[bin]]
name = "server"
path = "src/server.rs"

