[package]
name = "exgpc"
version = "0.1.0"
authors = ["guoxingyun <792130043@qq.com>"]
edition = "2018"

[dependencies]
mongodb = "0.3.11"
jsonrpc-http-server = "12.0"
serde = { version = "1.0", features = ["derive"] }
##ring ={ path = "/home/gxy/myproject/exgpc/ring" }
ring = "0.14.6"
base64 = "0.10.1"
untrusted = "0.6.2"
#rug = "0.6.0"
rust_decimal = "1.0.1"
num = "0.2"
jsonrpc-client-http = "0.5.0"
jsonrpc-client-core = "0.5.0"

[dependencies.rug]
version = "0.6.0"
default-features = false
features = ["float"]

[[bin]]
name = "server"
path = "src/server.rs"

