[package]
name = "scan_block"
version = "0.1.0"
authors = ["mist"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-serialize = "0.3"
mongodb = "0.3.11"
serde = { version = "1.0", features = ["derive"] }
jsonrpc-http-server = "12.0"
